--- a/index.html
+++ b/index.html
@@ -146,19 +146,19 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../iPhone.png.jpg" class="d-block w-100" alt="iPhone16's">
+      <img src="./iPhone.png.jpg" class="d-block w-100" alt="iPhone16's">
     </div>
     <div class="carousel-item">
-      <img src="../jacket.jpeg" class="d-block w-100" alt="Jacket">
+      <img src="./jacket.jpeg" class="d-block w-100" alt="Jacket">
     </div>
     <div class="carousel-item">
-      <img src="../Jordan 2.png" class="d-block w-100" alt="Jordan 4's">
+      <img src="./Jordan 2.png" class="d-block w-100" alt="Jordan 4's">
     </div>
     <div class="carousel-item">
-      <img src="../bag.jpeg" class="d-block w-100" alt="Bags">
+      <img src="./bag.jpeg" class="d-block w-100" alt="Bags">
     </div>
     <div class="carousel-item">
-      <img src="../Jew.png" class="d-block w-100" alt="Jewellery">
+      <img src="./Jew.png" class="d-block w-100" alt="Jewellery">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -185,8 +185,7 @@
     <div class="container col-xxl-8 px-4 pt-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="200"
-            loading="lazy">
+          
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Get ur back to school items here for the best rates.</h1>
@@ -216,7 +215,7 @@
   <div class="my-5"> <div class="p-5 text-center bg-body-tertiary"> 
     <div class="container py-5"> 
       <h2 class="text-body-emphasis">I have really enjoyed using this platfrom, it is safe and really easy to use.</h2> 
-      <img src="../Snapchat-514232355.jpg" alt="A dumb boy called ronald, from staff village" class="profile-img">
+      <img src="./Snapchat-514232355.jpg" alt="A dumb boy called ronald, from staff village" class="profile-img">
       <p class="col-lg-8 mx-auto lead">
         Ronald, Staff Village.
       </p> 
@@ -227,16 +226,16 @@
  <div class="container">
           <div class="row">
             <div class="col-lg-3 col-sm-12">
-              <img src="../mashable.png" alt="techcrunch" height="30">
+              <img src="./mashable.png" alt="techcrunch" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="../bizinsider.png" alt="mashable" height="30">
+              <img src="./bizinsider.png" alt="mashable" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="../techcrunch.png" alt="bizinsider" height="30">
+              <img src="./techcrunch.png" alt="bizinsider" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="../tnw.png" alt="tnw" height="30">
+              <img src="./tnw.png" alt="tnw" height="30">
             </div>
           </div>
         </div>
