--- a/solution.html
+++ b/solution.html
@@ -8,13 +8,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" 
   integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous"> 
         <style>
-
+       * { 
+        position: relative;
+        top: 5px;
+        left: 25px;
+        align-content: center;
+       }
         </style>
     </head>
 
     <body> 
         <form>
-  <div class="mb-3">
+  <div class="mb-3" id="solution">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
